<resources>
    <string name="app_name">지금이약</string>

    <string name="title_bar">타이틀 바</string>
    <string name="medicine_icon"> 약 아이콘</string>

    <string name="today_date">5월 25일</string>
    <string name="dosage_list_title">&#160;복용 리스트</string>

    <string name="morning_title">&#160;아침약</string>
    <string name="lunch_title">&#160;점심약</string>
    <string name="dinner_title">&#160;저녁약</string>

    <string name="list_background">리스트 배경</string>
    <string name="menu_bar">메뉴바</string>

    <string name="menu1">복용 리스트</string>
    <string name="menu2">복용 내역</string>
    <string name="menu3">보호자 관리</string>

    <string name="today_month">5월</string>

    <string name="medi_name">당뇨병약</string>
    <string name="medi_alarm">오전 10:00</string>

    <string name="medi_routine_detail">아침약</string>
    <string name="medi_time_detail">오전 09:30</string>
    <string name="medi_start_date_detail"> 2022.05.01 </string>
    <string name="medi_date_detail">&#160;~&#160;</string>
    <string name="medi_end_date_detail"> 2022.05.29 </string>
    <string name="medi_product_detail">다이아벡스정250mg</string>
    <string name="medi_memo_detail">일시적으로 소화불량, 설사 등의 증상</string>

    <string name="delete_button">삭제</string>
    <string name="modify_button">수정</string>

    <string name="alarm_main_title">약 알람 추가</string>
    <string name="medicine_name">약 이름</string>
    <string name="take_tiems">복용 시간</string>
    <string name="take_period">복용 기간</string>
    <string name="medicine_product_name">약 제품명</string>
    <string name="medicine_caution">주의 사항</string>
    <string name="save">저장</string>
    <string name="modify">수정</string>
    <string name="cancle">취소</string>
    <string name="hint_medicine_name">혈압약</string>
    <string name="hint_calendar_add">해당 화면을 클릭하세요</string>
    <string name="ex_hour">5시</string>
    <string name="ex_minute">42분</string>
    <string name="ex_date">5월 15일</string>
    <string name="ex_alram_notice">X번째 알림</string>
    <string name="ex_alarm_memo">혈압약 드셔야할 시간입니다.</string>
    <string name="ex_alram_date">5월 21일 수요일</string>
    <string name="medicine_name_detail">약 제품명</string>
    <string name="medi_morning">아침약</string>
    <string name="medi_afternoon">점심약</string>
    <string name="medi_night">저녁약</string>
    <string name="ex_morning">오전</string>


    <string name="add">저장</string>
    <string name="add_protector">보호자 추가</string>
    <string name="list_protector">등록된 보호자</string>
    <string name="name_protector">보호자 이름</string>
    <string name="phone_protector">보호자 전화번호</string>
    <string name="msg_protector">전송 문자</string>
    <string name="cancel">취소</string>

    <string name="take_medi">고혈압약</string>

    <string name="history_date">&#160;&#160;2022-05-25</string>


    <string name="test_date1">2022-05-25</string>
    <string name="test_date2">2022-05-24</string>
    <string name="test_date3">2022-05-23</string>

    <string name="protector_name">홍길동</string>
    <string name="protector_phone">(-) 없이 입력하세요</string>

    <string name="medi_morning_histroy">오전 7시 15분</string>
    <string name="medi_lunch_histroy">오후 12시 30분</string>
    <string name="medi_dinner_histroy">X</string>

    <string name="medi_check">복용</string>
    <string name="medi_uncheck">미복용</string>

    <string name="history_item_routine">오전</string>
    <string name="history_item_hour">7시</string>
    <string name="history_item_minute">30분</string>
    <string name="history_bunmo">/200</string>
    <string name="history_bunja">160</string>
    <string name="history_percent">80%</string>



</resources>