<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_daytime_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:contentDescription="@string/history_item_routine"
        app:srcCompat="@drawable/morning_medi"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_daytime_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:text="@string/history_item_routine" />

    <TextView
        android:id="@+id/tv_hour_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:text="@string/history_item_hour" />

    <TextView
        android:id="@+id/tv_minute_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:text="@string/history_item_minute" />

    <TextView
        android:id="@+id/tv_dosage_detail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_gravity="end"

        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/medi_check"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>