<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/title_bar"
            android:contentDescription="@string/title_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:src="@drawable/back_icon"
                android:contentDescription="@drawable/back_icon"

                android:onClick="BackClick"
                android:clickable="true"
                android:focusable="true" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/medi_name"
                android:text="@string/take_medi"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="4" />

        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="57dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_date"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/history_time">

        </ListView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_date2"

            android:textColor="@color/black"
            android:textSize="22sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="100dp">

        </ListView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_date3"

            android:textColor="@color/black"
            android:textSize="22sp" />

        <ListView
            android:id="@+id/medi_listview"
            android:layout_width="match_parent"
            android:layout_height="100dp"></ListView>

    </LinearLayout>


</LinearLayout>